--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="menu-screen">
   <div class="header-image">
     <img src="assets/1.jpg" alt="Ambijent" class="ambijent" />
-    <img src="assets/nazivkafica1.jpg" alt="RAŠ KAFE logo" class="logo-overlay" />
+    <img routerLink="/" src="assets/nazivkafica1.jpg" alt="RAŠ KAFE logo" class="logo-overlay" />
   </div>
 
   <div class="menu-content">
